<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_margin="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cartImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pica" />

        <TextView
            android:id="@+id/cartStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/item_1"
            android:textColor="@color/black"
            android:fontFamily="@font/gllight"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cartImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cartName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_2"
            android:textColor="@color/black"
            android:fontFamily="@font/glbold"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/cartImage"
            app:layout_constraintTop_toBottomOf="@+id/cartStore" />

        <TextView
            android:id="@+id/cartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/glbold"
            android:text="@string/item_12"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <ImageView
            android:id="@+id/cart_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plus" />

        <TextView
            android:id="@+id/cart_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/glbold"
            app:layout_constraintBottom_toTopOf="@+id/cart_minus_btn"
            app:layout_constraintEnd_toEndOf="@+id/cart_plus_btn"
            app:layout_constraintStart_toStartOf="@+id/cart_plus_btn"
            app:layout_constraintTop_toBottomOf="@+id/cart_plus_btn" />

        <ImageView
            android:id="@+id/cart_minus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/minus" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/item_13"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:fontFamily="@font/glbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cartImage"
            app:layout_constraintTop_toBottomOf="@+id/cartName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>