<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_margin="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flowerImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pica" />

        <TextView
            android:id="@+id/flowerStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/item_1"
            android:textColor="@color/black"
            android:fontFamily="@font/gllight"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/flowerImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/flowerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_2"
            android:textColor="@color/black"
            android:fontFamily="@font/glbold"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/flowerImage"
            app:layout_constraintTop_toBottomOf="@+id/flowerStore" />

        <TextView
            android:id="@+id/flowerPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/glbold"
            android:text="@string/item_12"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <ImageView
            android:id="@+id/cartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/floatbutton" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/item_13"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:fontFamily="@font/glbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/flowerImage"
            app:layout_constraintTop_toBottomOf="@+id/flowerName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>