<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FlowerDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/itemImage"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="350dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@drawable/picd"-->
<!--        tools:layout_editor_absoluteY="56dp" />-->

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        app:ci_drawable = "@drawable/select_dot"
        app:ci_drawable_unselected = "@drawable/unselect_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/details_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager">

        <TextView
            android:id="@+id/itemStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gllight"
            android:text="@string/item_1"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/glbold"
            android:text="@string/item_2"
            android:textColor="@color/green"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemStore" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/glbold"
                    android:text="@string/item_4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/itemTHC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:fontFamily="@font/gllight"
                    android:text="@string/item_8"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/glbold"
                    android:text="@string/item_5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/itemCBD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:fontFamily="@font/gllight"
                    android:text="@string/item_8"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/itemDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/gllight"
            android:lineSpacingExtra="7dp"
            android:text="@string/item_6"
            android:textColor="@color/grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ImageView
            android:id="@+id/details_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemDetails"
            app:srcCompat="@drawable/plus" />

        <TextView
            android:id="@+id/itemQuatity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/glbold"
            android:text="@string/item_9"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/details_plus"
            app:layout_constraintStart_toEndOf="@+id/details_plus"
            app:layout_constraintTop_toTopOf="@+id/details_plus" />

        <ImageView
            android:id="@+id/details_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/itemQuatity"
            app:layout_constraintStart_toEndOf="@+id/itemQuatity"
            app:layout_constraintTop_toTopOf="@+id/itemQuatity"
            app:srcCompat="@drawable/minus" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/glbold"
            android:text="@string/item_11"
            android:textColor="@color/green"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/itemQuatity"
            app:layout_constraintEnd_toStartOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/itemQuatity"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemQuatity" />

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:weightSum="3"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/divider">-->

        <!--            <LinearLayout-->
        <!--                android:layout_weight="2"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:weightSum="2">-->
        <!--            <TextView-->
        <!--                android:id="@+id/textView23"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:textSize="14sp"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:fontFamily="@font/gllight"-->
        <!--                android:text="@string/item_10" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/textView24"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/item_3" />-->
        <!--            </LinearLayout>-->
        <!--            <androidx.appcompat.widget.AppCompatButton-->
        <!--                android:id="@+id/button3"-->
        <!--                android:layout_weight="1"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="16dp"-->
        <!--                android:layout_marginEnd="16dp"-->
        <!--                android:background="@drawable/signup_btn"-->
        <!--                android:fontFamily="@font/glbold"-->
        <!--                android:text="@string/item_7"-->
        <!--                android:textAllCaps="false"-->
        <!--                android:textColor="@color/white"-->
        <!--                android:textSize="14sp"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@+id/divider" />-->

        <!--        </LinearLayout>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addbagBtn"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/signup_btn"
            android:fontFamily="@font/glbold"
            android:text="@string/item_7"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/gllight"
            android:text="@string/item_10"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/itemTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/glbold"
            android:text="@string/item_3"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView25"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toTopOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/gllight"
            android:text="@string/item_14"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/itemPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>